import items from pets

--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -10,6 +10,7 @@
 @import closet_hangers/petpage
 @import closet_lists/form
 @import neopets_pages/new
+@import neopets_users/form
 @import contributions/index
 @import items
 @import items/index
