--- a/app/views/closet_hangers/index.html.haml
+++ b/app/views/closet_hangers/index.html.haml
@@ -78,6 +78,7 @@
 
     = link_to "Import from closet", new_closet_page_path
     = link_to "Import from SDB", new_safety_deposit_page_path
+    = link_to "Import from pets", new_neopets_user_path
     = link_to "Export to petpage", petpage_user_closet_hangers_path(@user)
 
 
