--- a/app/stylesheets/items/_index.sass
+++ b/app/stylesheets/items/_index.sass
@@ -8,7 +8,7 @@ body.items-index
   form
     margin-bottom: 2em
 
-  #search-help
+  #search-info
     +main_unit
     padding-right: 1%
     dl
@@ -22,3 +22,4 @@ body.items-index
     img
       height: 80px
       width: 80px
+
