--- a/app/views/static/donate.html.haml
+++ b/app/views/static/donate.html.haml
@@ -1,14 +1,11 @@
 - title "Support Dress to Impress"
-%h2 Image Mode is almost here, but we need your help!
+%h2 Thank you so much for all your help. We made it!
 
 = campaign_progress do
   We have
   = surround '$', ',' do
     %span.campaign-raised
-  and need
-  = precede '$' do
-    %span.campaign-goal
-  to run the upgraded server for a year
+  which is just what we need for the upgrade. Thanks so much!
 
 - if can_use_image_mode?
   %p.success
@@ -23,61 +20,35 @@
     %h3 Thank you!
     %ol
 
+#image-mode-description
+  :markdown
+    **Hooray!** We're ready for the server upgrade to support Image Mode, and
+    we now have enough funds to run at that level for the next year. I'm pretty
+    darn excited about all this.
+
+    We'll run the server upgrade some time tonight, August 4, likely around
+    9PM NST. The site will probably be down for about 15 minutes, since that's
+    how upgrades work.
+
+    After that, we'll let the SWF converters run for a bit until almost all of
+    them are converted, then we'll release Image Mode to the public.
+
+    Thanks again for all your help. Dress to Impress runs on you, from our data
+    to our funds. You make this site the great resource that it is, and I'm
+    consistently impressed by this community's generosity. Thanks for all you
+    do!
+
 #image-mode-beta
   %header
-    As a Thank You gift, those who donate at least $5 will receive early
-    beta access to Image Mode
+    Support Dress to Impress!
   = pledgie_form_tag do
     = pledgie_amount_label_tag 'Amount'
     = pledgie_amount_field_tag
     %button{:type => 'submit'} Donate now!
-  %p
-    Once you're done, send your PayPal email address and
-    = link_to 'Dress to Impress username', login_path_with_return_to
-    to
-    = succeed '.' do
-      = mail_to 'webmaster@openneo.net'
-  %p We'll email you soon!
 
+  %p All donations go directly to hosting costs.
+  %p Thanks so much for your help!
 
-#image-mode-description
-  :markdown
-    **Soon, Dress to Impress will be able to both save outfits as images and
-    even run entirely without Flash**. Image Mode. It's taken months to put
-    together, and it's pretty darn exciting. It's the most requested feature
-    for Dress to Impress, ever.
-
-    **To get there, though, we need a server upgrade.** We've done our best to
-    cut back on memory usage on the server we have now, but ultimately found
-    that, since Dress to Impress has grown so much, we don't have the server
-    power to both run the site and convert Flash files to images. When we try,
-    the site goes down, and that's no good for anybody.
-
-    **So, we're moving from about $20 to $30 a month.** We'll be moving from
-    [Linode's 512 server to the 768 server](http://linode.com). It's what we
-    need to do in order to have enough RAM to both convert Flash to image and
-    also run a website with thousands of users a day.
-
-    **As a little treat, those who give at least $5 will get early access
-    to Image Mode.** Though we're still missing quite a few converted SWFs,
-    you'll be able to get a feel for what Image Mode will be when it's ready
-    for prime time, and help make sure it's exactly as simple and powerful as
-    it needs to be.
-
-    **Of course, it's still all about supporting a website you love.** Give
-    exactly as much as you want to give. If you can't afford a $5 gift right
-    now, don't worry about it. You'll still get Image Mode once it's ready.
-    Similarly, if you *can* afford to give more than $5, please consider doing
-    so. I often hear how much people appreciate Dress to Impress, and I'd hope
-    that it might be worth more than a wearable or two. I'm just one guy
-    building this site in my free time, and I can't afford server costs on my
-    own, so I'm so glad to be a part of such a generous community.
-
-    **Thank you for your continued support.** Dress to Impress is 100%
-    user-funded, and we intend to stay that way. Our goal is to raise enough
-    money to be able to keep running on the upgraded server for the next 12
-    months, so that's $280: $360 minus about $80 remaining from previous
-    fundraisers. Not very much. I know we can do it.
 
 #image-mode-comments
   #disqus_thread
