update campaign progress to say we have exceeded our goal

--- a/app/views/static/donate.html.haml
+++ b/app/views/static/donate.html.haml
@@ -2,10 +2,10 @@
 %h2 Thank you so much for all your help. We made it!
 
 = campaign_progress do
-  We have
+  We've received
   = surround '$', ',' do
     %span.campaign-raised
-  which is just what we need for the upgrade. Thanks so much!
+  exceeding our goal for the upgrade. Thanks so much!
 
 - if can_use_image_mode?
   %p.success
