update campaign: upgrade complete

--- a/app/views/static/donate.html.haml
+++ b/app/views/static/donate.html.haml
@@ -22,16 +22,13 @@
 
 #image-mode-description
   :markdown
-    **Hooray!** We're ready for the server upgrade to support Image Mode, and
-    we now have enough funds to run at that level for the next year. I'm pretty
-    darn excited about all this.
+    **Hooray!** We made our fundraising goal, and now have enough funds to run
+    on the upgraded server for the next year. I'm pretty darn excited about all
+    this.
 
-    We'll run the server upgrade some time tonight, August 4, likely around
-    9PM NST. The site will probably be down for about 15 minutes, since that's
-    how upgrades work.
-
-    After that, we'll let the SWF converters run for a bit until almost all of
-    them are converted, then we'll release Image Mode to the public.
+    The server upgrade went through around 9PM NST on August 4, and the SWF
+    converters are now running. We'll let them work for a bit until almost all
+    of the SWFs are converted, then we'll release Image Mode to the public.
 
     Thanks again for all your help. Dress to Impress runs on you, from our data
     to our funds. You make this site the great resource that it is, and I'm
