search by username

--- a/app/stylesheets/outfits/_new.sass
+++ b/app/stylesheets/outfits/_new.sass
@@ -134,6 +134,8 @@ body.outfits-new
       margin-left: .5em
       &:hover
         +opacity(1)
+    p
+      min-height: 4.5em
   #read-more
     float: right
 
