--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -3598,10 +3598,14 @@ body.outfits-new #sections img:hover {
   -khtml-opacity: 1;
 }
 /* line 137, ../../../app/stylesheets/outfits/_new.sass */
+body.outfits-new #sections p {
+  min-height: 4.5em;
+}
+/* line 139, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #read-more {
   float: right;
 }
-/* line 142, ../../../app/stylesheets/outfits/_new.sass */
+/* line 144, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #your-items-module h3:after {
   color: red;
   content: "new!";
