report broken images

--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -6,6 +6,7 @@
 
 @import partials/jquery.jgrowl
 
+@import broken_image_reports/new
 @import closet_hangers/index
 @import closet_hangers/petpage
 @import closet_lists/form
