update image mode faq for public release

--- a/app/views/static/image_mode.html.haml
+++ b/app/views/static/image_mode.html.haml
@@ -1,11 +1,8 @@
 - title 'Welcome to Image Mode!'
 
 :markdown
-  Thank you so much for helping to support Dress to Impress! From the data on
-  the site to the funds that keep it running, none of it happens without you.
-
-  Here's a quick breakdown of Image Mode, its beta status, and what that means
-  for you.
+  Yay! Image Mode! Our servers can handle Image Mode because of [your generous
+  donations][donate]. Thanks for all you do.
 
   What is Image Mode?
   -------------------
@@ -33,26 +30,10 @@
   -------------------------------------
 
   This means that some of the images you're trying to view haven't been
-  converted yet. They're waiting in line to be converted, and, in order to keep
-  the site stable, **the server will not convert any more images until the
-  upgrade is ready**. So, in actuality, waiting will do you no good.
-
-  **Once we're out of beta, however, that message shouldn't stay up for very long at
-  all.** Once the images are done converting, they will appear, and the message
-  will disappear. Once we finish converting the thousands of Flash files
-  already in our database, the conversion line will almost always be very short.
-
-  The main reason that Image Mode is not ready for the public yet, and the
-  reason we're raising money for a server upgrade, is that **we're not done
-  converting all of the customization Flash files to images**. There are over
-  100,000 to convert, and each one can take up to 10 seconds or so. We have,
-  however, converted a lot of them already. However, we've also discovered that,
-  when we do the conversion process, we have unacceptable amounts of downtime.
-  You may have run into some of it during the past few weeks. So, the converters
-  are off until the upgrade.
-
-  **Remember, this is just a preview of Image Mode.** You pretty much won't have
-  all of the images you want until the upgrade is all done.
+  converted yet. They're waiting in line to be converted. These days, that line
+  is pretty darn short, so the message shouldn't stay up for too long at all.
+  Just wait patiently for the magic SWF converters to run, and you should be
+  good to go :)
 
 
   How do I download an image?
@@ -78,14 +59,32 @@
   Impress in general, so is not recommended.
 
 
+  This image doesn't quite look right.
+  ------------------------------------
+
+  If part of your image looks a little off, like something is missing or is
+  transparent when it shouldn't be, hit the "Broken image?" link beneath the
+  Flash/Image mode switcher. Choose the image that seems broken, and report it.
+  The SWF converters will get on it as soon as they can. Thanks for your help!
+
+  Please note that, because our SWF converters use open-source software instead
+  of Adobe's software, some SWF files that use more complex features may not
+  come out right, no matter how many times we convert them. Usually this involves
+  fancy blur effects: Ghost pets, for example, have a sharp blue silhouette behind
+  them instead of a blue glow. There's not much we can do about that for the
+  time being. Most of them are okay, but if an image is just plain unusable…well,
+  that's what Flash mode is for!
+
+
   What do I do if I find a problem? Have a suggestion? Just want to talk?
   -----------------------------------------------------------------------
 
-  Email me at <webmaster@openneo.net>. Report Image Mode problems and broken
-  images, ask questions, give me cool ideas, or just say whatever you want.
-  That's what I'm here for.
+  Email me at <webmaster@openneo.net>. Report Image Mode bugs, ask questions,
+  give me cool ideas, or just say whatever you want. That's what I'm here for.
 
 
   Thanks again! Enjoy Image Mode!
   -------------------------------
+
+  [donate]: #{donate_path}
 
