can now have the same item in more than one list

--- a/app/stylesheets/closet_hangers/_index.sass
+++ b/app/stylesheets/closet_hangers/_index.sass
@@ -295,6 +295,7 @@ body.closet_hangers-index
 
   .closet-hangers-group-autocomplete-item, .closet-list-autocomplete-item
     span
+      +opacity(.5)
       font-style: italic
       padding: .2em .4em
 
