--- a/app/views/closet_hangers/_closet_hanger.html.haml
+++ b/app/views/closet_hangers/_closet_hanger.html.haml
@@ -4,7 +4,7 @@
   .quantity{:class => "quantity-#{closet_hanger.quantity}"}
     %span= closet_hanger.quantity
     - if show_controls
-      = form_for closet_hanger, :url => user_item_closet_hanger_path(current_user, closet_hanger.item), :html => {:class => 'closet-hanger-update'} do |f|
+      = form_for [current_user, closet_hanger], :html => {:class => 'closet-hanger-update'} do |f|
         = return_to_field_tag
         = f.hidden_field :list_id
         = f.hidden_field :owned
