--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -1163,30 +1163,34 @@ body.closet_hangers-index .closet-list.droppable-active .visibility-form {
 }
 /* line 297, ../../../app/stylesheets/closet_hangers/_index.sass */
 body.closet_hangers-index .closet-hangers-group-autocomplete-item span, body.closet_hangers-index .closet-list-autocomplete-item span {
+  -moz-opacity: 0.5;
+  -webkit-opacity: 0.5;
+  -o-opacity: 0.5;
+  -khtml-opacity: 0.5;
   font-style: italic;
   padding: 0.2em 0.4em;
 }
-/* line 302, ../../../app/stylesheets/closet_hangers/_index.sass */
+/* line 303, ../../../app/stylesheets/closet_hangers/_index.sass */
 body.closet_hangers-index .closet-list-autocomplete-item a, body.closet_hangers-index .closet-list-autocomplete-item span {
   font-size: 85%;
   padding-left: 2em;
 }
-/* line 307, ../../../app/stylesheets/closet_hangers/_index.sass */
+/* line 308, ../../../app/stylesheets/closet_hangers/_index.sass */
 body.closet_hangers-index .closet-hangers-group[data-owned=true] .user-wants, body.closet_hangers-index .closet-hangers-group[data-owned=false] .user-owns {
   background: #eeffee;
   font-weight: bold;
 }
-/* line 314, ../../../app/stylesheets/closet_hangers/_index.sass */
+/* line 315, ../../../app/stylesheets/closet_hangers/_index.sass */
 body.closet_hangers-index.current-user #closet-hangers .object:hover form {
   display: inline;
 }
-/* line 317, ../../../app/stylesheets/closet_hangers/_index.sass */
+/* line 318, ../../../app/stylesheets/closet_hangers/_index.sass */
 body.closet_hangers-index.current-user #closet-hangers .object:hover .closet-hanger-destroy {
   position: absolute;
   right: 18px;
   top: 52px;
 }
-/* line 322, ../../../app/stylesheets/closet_hangers/_index.sass */
+/* line 323, ../../../app/stylesheets/closet_hangers/_index.sass */
 body.closet_hangers-index.current-user #closet-hangers .object:hover .closet-hanger-destroy input {
   /* http://www.zurb.com/blog_uploads/0000/0617/buttons-03.html */
   -moz-border-radius: 5px;
@@ -1227,7 +1231,7 @@ body.closet_hangers-index.current-user #closet-hangers .object:hover .closet-han
 body.closet_hangers-index.current-user #closet-hangers .object:hover .closet-hanger-destroy input:hover {
   background-color: #999999;
 }
-/* line 325, ../../../app/stylesheets/closet_hangers/_index.sass */
+/* line 326, ../../../app/stylesheets/closet_hangers/_index.sass */
 body.closet_hangers-index.current-user #closet-hangers .object:hover .quantity {
   -moz-opacity: 1;
   -webkit-opacity: 1;
@@ -1237,89 +1241,89 @@ body.closet_hangers-index.current-user #closet-hangers .object:hover .quantity {
   top: 0;
   padding: 0;
 }
-/* line 331, ../../../app/stylesheets/closet_hangers/_index.sass */
+/* line 332, ../../../app/stylesheets/closet_hangers/_index.sass */
 body.closet_hangers-index.current-user #closet-hangers .object:hover .quantity span {
   display: none;
 }
-/* line 334, ../../../app/stylesheets/closet_hangers/_index.sass */
+/* line 335, ../../../app/stylesheets/closet_hangers/_index.sass */
 body.closet_hangers-index.current-user #closet-hangers .object:hover .quantity input[type=number] {
   padding: 2px;
   width: 2em;
 }
-/* line 338, ../../../app/stylesheets/closet_hangers/_index.sass */
+/* line 339, ../../../app/stylesheets/closet_hangers/_index.sass */
 body.closet_hangers-index.current-user #closet-hangers .object:hover .quantity input[type=submit] {
   font-size: 85%;
 }
-/* line 343, ../../../app/stylesheets/closet_hangers/_index.sass */
+/* line 344, ../../../app/stylesheets/closet_hangers/_index.sass */
 body.closet_hangers-index.current-user.js #closet-hangers .object:hover .quantity {
   display: block;
 }
-/* line 346, ../../../app/stylesheets/closet_hangers/_index.sass */
+/* line 347, ../../../app/stylesheets/closet_hangers/_index.sass */
 body.closet_hangers-index.current-user.js #closet-hangers .object:hover .quantity input[type=number] {
   width: 2.5em;
 }
-/* line 349, ../../../app/stylesheets/closet_hangers/_index.sass */
+/* line 350, ../../../app/stylesheets/closet_hangers/_index.sass */
 body.closet_hangers-index.current-user.js #closet-hangers .object:hover .quantity input[type=submit] {
   display: none;
 }
-/* line 352, ../../../app/stylesheets/closet_hangers/_index.sass */
+/* line 353, ../../../app/stylesheets/closet_hangers/_index.sass */
 body.closet_hangers-index.current-user.js #closet-hangers .object.loading {
   background: #eeffee;
   outline: 1px solid #006600;
 }
-/* line 356, ../../../app/stylesheets/closet_hangers/_index.sass */
+/* line 357, ../../../app/stylesheets/closet_hangers/_index.sass */
 body.closet_hangers-index.current-user.js #closet-hangers .object.loading .quantity {
   display: block;
 }
-/* line 359, ../../../app/stylesheets/closet_hangers/_index.sass */
+/* line 360, ../../../app/stylesheets/closet_hangers/_index.sass */
 body.closet_hangers-index.current-user.js #closet-hangers .object.loading .quantity span:after {
   content: "…";
 }
-/* line 363, ../../../app/stylesheets/closet_hangers/_index.sass */
+/* line 364, ../../../app/stylesheets/closet_hangers/_index.sass */
 body.closet_hangers-index.current-user.js #closet-hangers-contact form {
   display: none;
 }
-/* line 366, ../../../app/stylesheets/closet_hangers/_index.sass */
+/* line 367, ../../../app/stylesheets/closet_hangers/_index.sass */
 body.closet_hangers-index.current-user.js #closet-hangers-contact .edit-contact-link, body.closet_hangers-index.current-user.js #closet-hangers-contact #cancel-contact-link {
   display: inline;
 }
-/* line 370, ../../../app/stylesheets/closet_hangers/_index.sass */
+/* line 371, ../../../app/stylesheets/closet_hangers/_index.sass */
 body.closet_hangers-index.current-user.js #closet-hangers-contact.editing form {
   display: block;
 }
-/* line 373, ../../../app/stylesheets/closet_hangers/_index.sass */
+/* line 374, ../../../app/stylesheets/closet_hangers/_index.sass */
 body.closet_hangers-index.current-user.js #closet-hangers-contact.editing .edit-contact-link {
   display: none;
 }
-/* line 378, ../../../app/stylesheets/closet_hangers/_index.sass */
+/* line 379, ../../../app/stylesheets/closet_hangers/_index.sass */
 body.closet_hangers-index.current-user.js .closet-hangers-group header .show, body.closet_hangers-index.current-user.js .closet-hangers-group header .hide {
   cursor: pointer;
 }
-/* line 381, ../../../app/stylesheets/closet_hangers/_index.sass */
+/* line 382, ../../../app/stylesheets/closet_hangers/_index.sass */
 body.closet_hangers-index.current-user.js .closet-hangers-group header .hide {
   display: block;
 }
-/* line 385, ../../../app/stylesheets/closet_hangers/_index.sass */
+/* line 386, ../../../app/stylesheets/closet_hangers/_index.sass */
 body.closet_hangers-index.current-user.js .closet-hangers-group.hidden header .hide, body.closet_hangers-index.current-user.js .closet-hangers-group.hidden .closet-hangers-group-content {
   display: none;
 }
-/* line 388, ../../../app/stylesheets/closet_hangers/_index.sass */
+/* line 389, ../../../app/stylesheets/closet_hangers/_index.sass */
 body.closet_hangers-index.current-user.js .closet-hangers-group.hidden header .show {
   display: block;
 }
-/* line 391, ../../../app/stylesheets/closet_hangers/_index.sass */
+/* line 392, ../../../app/stylesheets/closet_hangers/_index.sass */
 body.closet_hangers-index.current-user.js #toggle-help {
   display: inline;
 }
-/* line 395, ../../../app/stylesheets/closet_hangers/_index.sass */
+/* line 396, ../../../app/stylesheets/closet_hangers/_index.sass */
 body.closet_hangers-index.js #toggle-compare {
   display: inline;
 }
-/* line 399, ../../../app/stylesheets/closet_hangers/_index.sass */
+/* line 400, ../../../app/stylesheets/closet_hangers/_index.sass */
 body.closet_hangers-index.js #closet-hangers.comparing .object {
   display: none;
 }
-/* line 403, ../../../app/stylesheets/closet_hangers/_index.sass */
+/* line 404, ../../../app/stylesheets/closet_hangers/_index.sass */
 body.closet_hangers-index.js #closet-hangers.comparing .closet-hangers-group[data-owned=true] .user-wants, body.closet_hangers-index.js #closet-hangers.comparing .closet-hangers-group[data-owned=false] .user-owns {
   display: inline-block;
 }
@@ -1878,35 +1882,61 @@ body.items-show #closet-hangers {
   font-size: 85%;
   margin-left: 1em;
   padding: 1em;
-  width: 21em;
-}
-/* line 117, ../../../app/stylesheets/items/_show.sass */
-body.items-show #closet-hangers label, body.items-show #closet-hangers header {
-  display: block;
-  font-weight: bold;
+  width: 30em;
+  position: relative;
+  z-index: 2;
 }
 /* line 121, ../../../app/stylesheets/items/_show.sass */
-body.items-show #closet-hangers header {
-  font-size: 125%;
+body.items-show #closet-hangers h3 {
+  font-size: 150%;
+  font-weight: bold;
+  margin-bottom: 0.25em;
 }
-/* line 124, ../../../app/stylesheets/items/_show.sass */
+/* line 126, ../../../app/stylesheets/items/_show.sass */
+body.items-show #closet-hangers #closet-hangers-ownership-groups {
+  overflow: hidden;
+  display: inline-block;
+  margin-bottom: 0.5em;
+}
+/* line 8, ../../../app/stylesheets/partials/clean/_mixins.sass */
+body.items-show #closet-hangers #closet-hangers-ownership-groups {
+  display: block;
+}
+/* line 130, ../../../app/stylesheets/items/_show.sass */
+body.items-show #closet-hangers #closet-hangers-ownership-groups div {
+  float: left;
+  margin: 0 5%;
+  text-align: left;
+  width: 40%;
+}
+/* line 136, ../../../app/stylesheets/items/_show.sass */
+body.items-show #closet-hangers #closet-hangers-ownership-groups div li {
+  list-style: none;
+  word-wrap: break-word;
+}
+/* line 140, ../../../app/stylesheets/items/_show.sass */
+body.items-show #closet-hangers #closet-hangers-ownership-groups div li.unlisted {
+  font-style: italic;
+}
+/* line 143, ../../../app/stylesheets/items/_show.sass */
 body.items-show #closet-hangers form {
   padding: 0.5em 0;
 }
-/* line 127, ../../../app/stylesheets/items/_show.sass */
+/* line 146, ../../../app/stylesheets/items/_show.sass */
 body.items-show #closet-hangers select {
   width: 9em;
 }
-/* line 130, ../../../app/stylesheets/items/_show.sass */
+/* line 149, ../../../app/stylesheets/items/_show.sass */
 body.items-show #closet-hangers input[type=number] {
-  width: 4em;
+  margin-right: 0.5em;
+  width: 3em;
 }
-/* line 135, ../../../app/stylesheets/items/_show.sass */
+/* line 155, ../../../app/stylesheets/items/_show.sass */
 body.items-show.js #trade-hangers p {
   max-height: 3em;
   overflow: hidden;
 }
-/* line 139, ../../../app/stylesheets/items/_show.sass */
+/* line 159, ../../../app/stylesheets/items/_show.sass */
 body.items-show.js #trade-hangers p.showing-more {
   max-height: none;
 }
