--- a/app/views/static/donate.html.haml
+++ b/app/views/static/donate.html.haml
@@ -1,7 +1,7 @@
 - title "Support Dress to Impress"
 %h2 Thank you so much for all your help. We made it!
 
-= campaign_progress do
+= campaign_progress(:always => true) do
   We've received
   = surround '$', ',' do
     %span.campaign-raised
