give SWFs real, unique ID numbers
Lots of scary bugs were being caused by the fact that the possibly-duplicate Neopets ID
was being treated as an SWF's real primary key, meaning that a save meant for object swf
number 123 could be saved to biology swf number 123. Which is awful.

This update gives SWFs their own unique internal ID numbers. All external lookups still use
the remote ID and the type, meaning that the client side remains totally unchanged (phew).
However, all database relationships with SWFs use the new ID numbers, making everything
cleaner. Yay.

There are probably a few places where it would be appropriate to optimize certain lookups
that still depend on remote ID and type. Whatever. Today's goal was to remove crazy
glitches that have been floating around like mad. And I think that goal has been met.

--- a/app/views/broken_image_reports/new.html.haml
+++ b/app/views/broken_image_reports/new.html.haml
@@ -15,7 +15,8 @@
       = link_to image_tag(swf_asset.s3_url([150, 150])), swf_asset.url
       - unless swf_asset.image_pending_repair?
         = form_tag(:action => :create) do
-          = hidden_field_tag 'swf_asset_id', swf_asset.id
+          = hidden_field_tag 'swf_asset_remote_id', swf_asset.remote_id
+          = hidden_field_tag 'swf_asset_type', swf_asset.type
           = submit_tag 'Report as broken'
 
         - if swf_asset.converted_at?
