specify size on image download

--- a/app/stylesheets/outfits/_edit.sass
+++ b/app/stylesheets/outfits/_edit.sass
@@ -230,8 +230,15 @@ body.outfits-edit
         border-top: 0
   #preview-download-image
     display: none
-    font-size: 85%
-    margin: 0 auto
+    margin: 1em auto
+    h3
+      font-size: 125%
+      margin-bottom: .5em
+    ul
+      list-style: none
+    button
+      font-size: 75%
+      width: 100%
   #preview-mode-note, #report-broken-image
     display: block
     font-size: 75%
